--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--header-->
+    <header>
+        <div>
+            <img src="" alt="" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200 ">
+        </div>
+    </header>
 </body>
 </html>
