--- a/index.html
+++ b/index.html
@@ -1,16 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de Restaurantes</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <!--header-->
-    <header>
-        <div>
-            <img src="" alt="" class="w-32 h-32 rounded-full shadow-lg hover:scale-110 duration-200 ">
+    <div class="container">
+        <h2>Restaurantes Disponíveis</h2>
+       
+        <div class="filters">
+            <select>
+                <option value="">Filtrar por nota</option>
+                <option value="4.0">1.0+</option>
+                <option value="4.0">2.0+</option>
+                <option value="4.0">2.5+</option>
+                <option value="4.0">3.0+</option>
+                <option value="4.5">4.5+</option>
+                <option value="4.0">4.0+</option>
+                <option value="4.0">5.0+</option>
+            </select>
+            <select>
+                <option value="">Tempo de entrega</option>
+                <option value="60">Até 10-15 min</option>
+                <option value="30">Até 30-45 min</option>
+                <option value="60">Até 60-120 min</option>
+            </select>
+            <select>
+                <option value="">Tipo de comida</option>
+                <option value="brasileira">Hamburguer</option>
+                <option value="pizza">Pizza</option>
+                <option value="japonesa">Japonesa</option>
+                <option value="japonesa">Sorvete</option>
+                <option value="japonesa">batatinha</option>
+                <option value="japonesa">Pastel</option>
+                <option value="japonesa">bolos</option>
+                <option value="japonesa">Doces</option>
+                <option value="japonesa">Salgados</option>
+
+            </select>
         </div>
-    </header>
+       
+        <div class="restaurant-list">
+            <div class="restaurant">
+                <img src="img/hambuguer1.webp" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>hambuguer</h3>
+                    <h4>Hamburguer do paulista</h4>
+                    <p>Tempo: 40 min | Nota: 4.4</p>
+                </div>
+                <p><strong>R$ 16,25</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/pastel2.jpg" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Pastel de Carne</h3>
+                    <h4>Pastel da anny</h4>
+                    <p>Tempo: 60 min | Nota: 4.4</p>
+                </div>
+                <p><strong>R$ 19,99</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/pizza2.jpg" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Pizza de Queijo com Presunto</h3>
+                    <h4>Pizzaria do seu João</h4>
+                    <p>Tempo: 53 min | Nota: 4.8</p>
+                </div>
+                <p><strong>R$ 24,99</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/batatinha1.avif" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>batatinha Frita </h3>
+                    <h4>Besteirinhas do zé</h4>
+                    <p>Tempo: 40 min | Nota: 4.4</p>
+                </div>
+                <p><strong>R$ 16,25</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/sushi1.jpg" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Sushi </h3>
+                    <h4>Comida Japonesa</h4>
+                    <p>Tempo: 60 min | Nota: 4.4</p>
+                </div>
+                <p><strong>R$ 19,99</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/trufas.jpg" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Trufa de Maracuja</h3>
+                    <h4>Trufas da kali</h4>
+                    <p>Tempo: 53 min | Nota: 4.8</p>
+                </div>
+                <p><strong>R$ 24,99</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/sorvete1.webp" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Sorvete de Morango e Limão</h3>
+                    <h4>Hamburguer do paulista</h4>
+                    <p>Tempo: 60 min | Nota: 4.4</p>
+                </div>
+                <p><strong>R$ 19,99</strong></p>
+            </div>
+            <div class="restaurant">
+                <img src="img/bolo1.avif" width="200" height="200" alt="Comida">
+                <div class="info">
+                    <h3>Bolo de Chocolate com Morangos</h3>
+                    <h4>Bolos já</h4>
+                    <p>Tempo: 53 min | Nota: 4.8</p>
+                </div>
+                <p><strong>R$ 24,99</strong></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
